--- a/BDDTraining.Feature.Test/BDDTraining.Feature.Test.csproj
+++ b/BDDTraining.Feature.Test/BDDTraining.Feature.Test.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="ExtentReports" Version="4.1.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
+    <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
     <PackageReference Include="SpecFlow" Version="3.5.14" />
     <PackageReference Include="SpecFlow.xUnit" Version="3.5.14" />
     <PackageReference Include="xunit" Version="2.4.1" />
